# OpenGL_Renderer

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/CommonRenderUtility/: CMakeLists.txt
src/CommonRenderUtility/private/src/: CMakeLists.txt
src/GLRenderer/: CMakeLists.txt
src/GLRenderer/private/src/: CMakeLists.txt  glad.c
src/include/glad/: glad.h
tests/: CMakeLists.txt  main.cpp
